Redesign recipe index: mobile-friendly cards, approved images, and improved rating display

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -13,6 +13,7 @@ de:
         user: "Benutzer"
         created_at: "Erstellt am"
         views: "Aufrufe"
+        visits_count: "Aufrufe"
   pagy:
     item_name:
       one: "Eintrag"
