feat(auth): unify login identifiers and refine registration UX
- Allow login via both email address and username.
- Enforce mandatory, unique, case-insensitive usernames and emails.
- Update password requirements to min 6 chars with appropriate UI hints.
- Fix @user initialization in Registrations#new.
- Standardize AJAX AuthForm styling and add client-side confirmation check.
- Localize error messages and attribute names in German.
- Add comprehensive request specs for login and registration.

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1,5 +1,10 @@
 de:
   hello: "Hallo Welt"
+  errors:
+    messages:
+      confirmation: "stimmt nicht mit %{attribute} überein"
+      taken: "ist bereits vergeben"
+      blank: "muss ausgefüllt werden"
   activerecord:
     models:
       recipe:
@@ -8,7 +13,15 @@ de:
       recipe_comment:
         one: "Kommentar"
         other: "Kommentare"
+      user:
+        one: "Benutzer"
+        other: "Benutzer"
     attributes:
+      user:
+        email_address: "Email Adresse"
+        username: "Benutzername"
+        password: "Passwort"
+        password_confirmation: "Passwort Bestätigung"
       recipe:
         title: "Name"
         alcohol_content: "Alkoholgehalt"
